# langchain_v1

./: pyproject.toml  requirements.txt
code/: 1-langchaininto.ipynb
code/chatbot/: app.ipynb  app.py  main_app.py
